<resources>
    <string name="app_name">TommyContacts</string>
    <string name="app_version">软件版本号：V0.0.1</string>
    <string name="svn_version">代码版本号：778</string>
    <string name="hello">Hello World!</string>
    <string name="carol">carol</string>
    <string name="mobile_ask">请输入11位手机号</string>
    <string name="name_limit_char">_0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="password_ask">密码由6-18位数字、字母及下划线组成</string>
    <string name="verify_code_get">获取验证码</string>
    <string name="user_agreement_read">我已阅读并接受 </string>
    <string name="verify_code">暂时输入123456</string>
    <string name="agreement">用户协议</string>
    <string name="user_regist">注册</string>
    <string name="user_agreement">\t\t以下条款将作为用户在使用本APP服务时应遵循的协议约定。

    \n\n\t\t用户资格
    \n\n\t\t服务仅向18周岁以上有完全民事行为能力人提供。用户使用服务时应确认为具备相应民事行为能力的自然人、法人或其他组织。。

    \n\n\t\t用户使用服务时，不得违背社会公共利益或公共道德，不得损害他人的合法权益，不得违反本协议及相关规则。如果违反前述承诺，用户应自行承担所有法律师后果，软件开发人员不负任何连带责任。

    \n\n\t\t对于用户在此软件上的行为，开发人员有权单方认定用户行为是否构成对本协议及相关规则的违反，并据此采取相应处理措施。


   	\n\n\t\t不会向任何人出售或出借用户的个人信息，除非事先得到用户的许可；软件亦不允许任何第三方以任何手段收集、编辑、出售、传播或披露用户的个人信息。；

   	\n\n\t\t为服务用户的目的，软件可能通过使用用户的个人信息。

   	\n\n\t\t用户的个人信息将在下述情况下部分或全部被披露：

     \n\n\t\t经用户同意，向第三方披露；
  	 \n\n\t\t如果用户是具备资格的知识产权投诉人并已提起投诉，应被投诉人要求而向被投诉人披露，以便双方处理可能的权利纠纷；
     \n\n\t\t根据法律的有关规定，或者行政、司法机构的要求，向第三方或者行政、司法机构披露；
     \n\n\t\t如果用户出现违反中国有关法律或者网站政策的情况而需要向第三方披露。。</string>
    <!-- Toast -->
    <string name="mobile_empty">手机号不能为空</string>
    <string name="mobile_length">请输入11位有效手机号码</string>
    <string name="password_empty">密码不能为空</string>
    <string name="password_length">请输入6至18位密码</string>
    <string name="mobile_old_empty">原手机号不能为空</string>
    <string name="mobile_new_empty">新手机号不能为空</string>
    <string name="change_mobile_info">验证码将发送到您的新手机号上。</string>
    <string name="verify_code_empty">验证码不能为空</string>
    <string name="recommended_code_empty">推荐码不能为空</string>
    <string name="verify_code_length">验证码长度必须为6位</string>
    <string name="user_agreement_uncheck">用户服务协议未选</string>
    <string name="verify_code_sent">验证码已发送</string>
    <string name="pasword_different">您两次输入的密码不一致！</string>
    <string name="mobile_same">两次手机号一致，不能进行手机号修改！</string>
    <string name="local_verify_code_empty">验证码不能为空</string>
    <string name="local_verify_code_no_right">验证码不能正确</string>
    <string name="password_forget">忘记密码？</string>
    <string name="login">登录</string>
    <string name="contactsList">Contacts</string>
    <!-- Dialog message shown when reading a VCard file -->
    <string name="reading_vcard_message">正在读取Vcard文件</string>
    <!-- Dialog message shown when importing VCard data into local database -->
    <string name="importing_vcard_message">Importing vCard data</string>
    <!-- Dialog title shown when reading VCard data failed -->
    <string name="reading_vcard_failed_title">Reading of vCard data has failed</string>
    <!-- The message for exporting all contacts in the phone, without caring its Account -->
    <string name="export_all_contacts">All contacts</string>
    <!-- The message for exporting only contacts is the phone locally, which are not associated with any account -->
    <string name="export_phone_local_only">Locally stored contacts</string>
    <!-- The menu item that launches VCard export activity -->
    <string name="export_contact_list">Export contacts</string>
    <!-- Dialog title shown when a user confirms whether he/she export Contact data -->
    <string name="confirm_export_title">Confirm export</string>
    <!-- The failed reason: "I/O Error" -->
    <!-- Dialog title shown when SD Card does not exist -->
    <string name="no_sdcard_title">No SD card</string>
    <!-- Dialog message shown when SDcard does not exist -->
    <string name="no_sdcard_message">No SD card detected</string>
    <!-- Dialog title shown when searching VCard data from SD Card -->
    <string name="searching_vcard_title">搜索vCard</string>
    <!-- Dialog title shown when asking a user whether import contact data from SIM or SD Card -->
    <string name="select_import_type_title">Where would you like to import contacts from?</string>
    <!-- Action string for selecting SIM for importing contacts -->
    <string name="import_from_sim">Import from SIM card</string>
    <!-- Action string for selecting SD Card for importing contacts -->
    <string name="import_from_sdcard">Import from SD card</string>
    <!-- Action that exports all contacts to SD Card -->
    <string name="export_to_sdcard">Export to SD card</string>
    <!-- "Import one vCard file" -->
    <string name="import_one_vcard_string">导入一张vCard 文件</string>
    <!-- "Import more than one vCard -->
    <string name="import_multiple_vcard_string">导入多张vCard 文件</string>
    <!-- "Import all vCard files" -->
    <string name="import_all_vcard_string">导入所有vCard 文件</string>
    <!-- Dialog message shown when searching VCard data from SD Card -->
    <string name="searching_vcard_message">Searching for vCard data on SD card</string>
    <!-- Dialog title shown when searching VCard data failed. -->
    <string name="scanning_sdcard_failed_title">没有找到vCard</string>
    <!-- The failed reason: "I/O Error" -->
    <string name="fail_reason_io_error">I/O Error</string>
    <!-- The failed reason: "Failed to parse VCard data" -->
    <string name="fail_reason_vcard_parse_error">Failed to parse vCard for unexpected reason</string>
    <!-- The failed reason: "The VCard is not supported right now, but may be supported in the future" -->
    <string name="fail_reason_vcard_not_supported_error">Failed to parse vCard though it seems in valid format, since the current implementation does not support it</string>
    <!-- The failed reason: "There is no VCard file" -->
    <string name="fail_reason_no_vcard_file">No vCard file found on the SD card</string>
    <!-- The failed reason: "There is no valid VCard entry in the file(s)" -->
    <string name="fail_reason_no_vcard_entry">No valid vCard entry found for your selection</string>
    <!-- The failed reason: "One or more files failed to be imported. (<a list of file names>)" -->
    <string name="fail_reason_failed_to_read_files">One or more files failed to be imported (%s).</string>
    <!--
         The failed reason: "Unknown error". This message should not be shown
         but it may in some buggy condition.


    -->
    <string name="fail_reason_unknown">Unknown error</string>
    <!-- Dialog title shown when a user is asked to select VCard file -->
    <string name="select_vcard_title">选择VCard文件</string>
    <!-- Dialog message shown when a user is asked to choose VCard file -->
    <string name="select_vcard_message">Please select a vCard file to import</string>
    <string name="scanning_sdcard_failed_message">Scanning SD card failed </string>
    <string name="reading_vcard_title">正在读取vcard</string>
    <string name="progress_shower_message"/>
    <string name="exit">退出</string>
    <string name="cancle">取消</string>
</resources>
