<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EFEFF4"
    android:orientation="vertical" >

    <!-- 用户注册界面 -->

    <RelativeLayout
        android:id="@+id/acbuwa_topbar"
        style="@style/topbar_bg"
        android:layout_width="fill_parent"
        android:layout_height="46.0dip" >

        <TextView
            style="@style/topbar_text"
            android:text="注册" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <View style="@style/act_view_linespace" />

        <LinearLayout
            style="@style/act_ll"
            android:background="@color/white" >

            <ImageView
                style="@style/act_image_icon"
                android:src="@drawable/icon_user" />

            <com.tommy.util.ClearEditText
                android:id="@+id/et_userregister_phoneNum"
                style="@style/act_et_content"
                android:background="@android:color/transparent"
                android:hint="@string/mobile_ask"
                android:inputType="number"
                android:maxLength="11" />
        </LinearLayout>

        <View style="@style/act_view_linespace" />

        <LinearLayout
            style="@style/act_ll"
            android:background="@color/white" >

            <ImageView
                style="@style/act_image_icon"
                android:src="@drawable/icon_pas" />

            <com.tommy.util.ClearEditText
                android:id="@+id/et_userregister_pwd"
                style="@style/act_et_content"
                android:digits="@string/name_limit_char"
                android:hint="@string/password_ask"
                android:inputType="textPassword"
                android:maxLength="18" />
        </LinearLayout>

        <View style="@style/act_view_linespace" />

        <LinearLayout
            style="@style/act_ll_getcode"
            android:background="@color/white" >

            <ImageView
                style="@style/act_image_icon"
                android:src="@drawable/icon_test" />

            <EditText
                android:id="@+id/et_userregister_code"
                style="@style/act_et_getcode"
                android:hint="@string/verify_code"
                android:inputType="number"
                android:maxLength="6"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_userregister_code"
                android:layout_width="106dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dip"
                android:background="@drawable/sel_btn_getcode"
                android:text="@string/verify_code_get" />
        </LinearLayout>

        <View style="@style/act_view_linespace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cb_userregister_agreement"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:checked="true"
            android:drawablePadding="5dip"
            android:paddingLeft="5dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|left"
            android:text="@string/user_agreement_read" />

        <Button
            android:id="@+id/btn_userregister_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="5dip"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|left"
            android:text="@string/agreement"
            android:textColor="@color/text_button_url"
            android:textSize="13.5sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_userregister_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:text="@string/user_regist" />

</LinearLayout>