<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EFEFF4"
    android:orientation="vertical" >

    <!-- 用户登录界面 -->

    <RelativeLayout
        android:id="@+id/acbuwa_topbar"
        style="@style/topbar_bg"
        android:layout_width="fill_parent"
        android:layout_height="46.0dip" >

        <TextView
            style="@style/topbar_text"
            android:text="登录" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout style="@style/act_ll" >

            <ImageView
                android:id="@+id/userlogin_username_picture"
                style="@style/act_image_icon"
                android:src="@drawable/icon_user" />

            <com.tommy.util.ClearEditText
                android:id="@+id/et_userlogin_username"
                style="@style/act_et_content"
                android:hint="@string/mobile_ask"
                android:inputType="number"
                android:maxLength="11" />
        </LinearLayout>

        <View style="@style/act_view_linespace" />

        <LinearLayout style="@style/act_ll" >

            <ImageView
                android:id="@+id/userlogin_password_picture"
                style="@style/act_image_icon"
                android:src="@drawable/icon_pas" />

            <com.tommy.util.ClearEditText
                android:id="@+id/et_userlogin_password"
                style="@style/act_et_content"
                android:digits="@string/name_limit_char"
                android:hint="@string/password_ask"
                android:inputType="textPassword"
                android:maxLength="18" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/act_view_linespace" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="15dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_userlogin_login"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/sel_btn_common"
            android:onClick="buttonLogin"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>